# rt-qpcr-protocol-guide

./: .gitignore  LICENSE  README.md  UPLOAD_TO_GITHUB.md  pyproject.toml
docs/: 01-primer-design.md  02-rna-extraction.md  03-reverse-transcription.md  04-qpcr-experiment.md  05-data-analysis.md  06-automation-pipeline.md  references.md  troubleshooting.md
examples/: run_demo.py
legacy/05_Result_Processing/: README.md
legacy/05_Result_Processing/result_processor/: .gitignore  README.md  requirements.txt  run_gui.bat
legacy/05_Result_Processing/result_processor/configs/: My daily processing template.txt  example_layout.txt  export_formats.yaml
legacy/05_Result_Processing/result_processor/scripts/: start_gui.py
legacy/05_Result_Processing/result_processor/src/: __init__.py
legacy/05_Result_Processing/结果处理/: .gitignore  20250111F1-♂- male-hmc-3Analysis and processing.csv  README.md  requirements.txt  run_gui.bat
legacy/05_Result_Processing/结果处理/Results/: 2025.11.21_paired.xlsx  test_vertical.xlsx
legacy/05_Result_Processing/结果处理/configs/: My daily processing template.txt  example_layout.txt  export_formats.yaml
legacy/05_Result_Processing/结果处理/examples/: 2025.11.21  2025.11_plate.xlsx  sample_ddct_input.csv
legacy/05_Result_Processing/结果处理/src/: __init__.py  (+3 more)
src/rt_qpcr_guide/: __init__.py  cli.py  io.py  primer_qc.py  qpcr_analysis.py  rt_calculator.py
templates/: ct_values_template.csv  experiment_record_template.md  rna_concentration_template.csv  sample_info_template.csv
tests/: test_primer_qc.py  test_qpcr_analysis.py  test_rt_calculator.py
(+5 files in other folders)
